fixed Download spacing v2

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Neuton',Palatino,Arial,serif;
+    font-family: Neuton,"Palatino",Arial,serif;
     color: #fff;
     background-color: #000;
 }
@@ -54,7 +54,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #1d9b6c;
+    color: #ff99cc;
 }
 
 .light {
@@ -257,15 +257,12 @@ a:focus {
     }
 }
 
-.content-section {
-    padding-top: 0px;
-}
-
 
 
 .download-section {
     width: 100%;
-    padding: 50px 0;
+    margin-top: 50px 0;
+    padding: 55px;
     color: #fff;
     background: url(../img/crowd-2.gif) no-repeat center center scroll;
     background-color: #000;
@@ -276,7 +273,7 @@ a:focus {
 }
 
 .contact-section {
-    margin-top: 60px;}
+    margin-top: 50px;}
 
 #map {
     width: 100%;
@@ -286,20 +283,16 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 0;
+        margin-top: 50px;
     }
 
     .download-section {
-        padding: 150px 0;
+        padding: 75px 0;
     }
 
-    #map {
-        height: 400px;
-        margin-top: 250px;
-    }
     .contact-section {
-    margin-bottom: 60px;
-    margin-top: 60px;
+    margin-bottom: 50px;
+    margin-top: 20px;
 }
 }
 
@@ -369,7 +362,7 @@ ul.banner-social-buttons {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 30px 0;
 }
 
 footer p {
